--- a/dwa17/package.json
+++ b/dwa17/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
+    "@babel/eslint-parser": "^7.22.7",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.38.0",
